# ML-Handwritten-Numbers

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml
Source/: Activation.h  Cost.h  DataPoint.h  HelperFunctions.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Number.h  ProgramLoop.cpp  ProgramLoop.h  Renderer.cpp  Renderer.h  ThreadPool.h  main.cpp
